--- a/MP2_Sources/.vscode/settings.json
+++ b/MP2_Sources/.vscode/settings.json
@@ -2,6 +2,7 @@
     "files.associations": {
         "kernel.C": "cpp",
         "cont_frame_pool.C": "cpp",
-        "simple_frame_pool.C": "cpp"
+        "simple_frame_pool.C": "cpp",
+        "machine.C": "cpp"
     }
 }
